Add more validation tests and update validation to pass.